--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "formik": "^2.4.6",
+    "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.15.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.1.0",
     "react-router-dom": "^7.6.3",
     "yup": "^1.6.1"
   },
